--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "will-my-backend-work",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www"
   },
